@@ -1,3 +1,15 @@
+2007-02-22  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: Correct escaping of destination. We will not crash
+	  anymore when destination folder contains spaces or weirds chars.
+	  Fixed a problem with lame parameters when using VBR and lowest 
+	  quality.
+
+2006-12-15  Gautier Portet <kassoulet gmail com>
+
+	* soundconverter.py: If id3v2mux is not present, we dump it instead of
+	  crashing encoder.
+
 2006-12-05  Gautier Portet <kassoulet gmail com>
 
 	* po/pt_BR.po: Updated Brazilian translation.
